# dummy_ros2_driver

./: CMakeLists.txt  README.md  REAdME.md  package.xml  setup.cfg  setup.py
config/: config.yaml  dummy_config.yaml  fingerprinter_camera.yaml  usb_camera.yaml
dummy_cli_tool/: run_shell.py
dummy_cli_tool/fibre/: discovery.py  protocol.py  remote_object.py  serial_transport.py  shell.py  tcp_transport.py  udp_transport.py  usbbulk_transport.py
dummy_cli_tool/ref_tool/: __init__.py  configuration.py  shell.py  utils.py
dummy_controller/: dummy_controller.py  fingerprint_camera.py  pub_tf_debuig.py
dummy_highfrequency_controller/: dummy_arm_controller.py
include/: common_lib.h  usb_cam_publisher.hpp
launch/: dummy_controller.launch.py  dummy_fingerprint.launch.py  dummy_usbcamera.launch.py
src/: dummy_controller.cpp  usb_cam_publisher.cpp
