<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dummy_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yeyiru1997@gmail.com">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_camke_python</buildtool_depend>
  <build_depend>ament_cmake</build_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>OpenCV</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <export>
    <!-- <build_type>ament_python</build_type> -->
    <build_type>ament_cmake</build_type>
  </export>

</package>
